# books_integration

./: .mergify.yml  README.md  pyproject.toml
books_integration/: api.py  doc_converter.py  hooks.py  modules.txt  sync_queue.py  utils.py
books_integration/api/: __init__.py  sync.py
books_integration/books_integration/doctype/book_sync_detail/: book_sync_detail.json  book_sync_detail.py
books_integration/books_integration/doctype/books_erpn_doc_name/: books_erpn_doc_name.js  books_erpn_doc_name.json  books_erpn_doc_name.py  test_books_erpn_doc_name.py
books_integration/books_integration/doctype/books_error_log/: books_error_log.js  books_error_log.json  books_error_log.py  test_books_error_log.py
books_integration/books_integration/doctype/books_instance/: books_instance.js  books_instance.json  books_instance.py  test_books_instance.py
books_integration/books_integration/doctype/books_integration_log/: books_integration_log.js  books_integration_log.json  books_integration_log.py  test_books_integration_log.py
books_integration/books_integration/doctype/books_reference/: books_reference.js  books_reference.json  books_reference.py  test_books_reference.py
books_integration/books_integration/doctype/books_sync_queue/: books_sync_queue.js  books_sync_queue.json  books_sync_queue.py  test_books_sync_queue.py
books_integration/books_integration/doctype/books_sync_settings/: books_sync_settings.js  books_sync_settings.json  books_sync_settings.py  (+1 more)
books_integration/books_integration/hooks/: sync_queue.py
books_integration/scheduler/: __init__.py
(+8 files in other folders)
